[project]
name = "ros2nix"
version = "0.0.1"
authors = [
  { name="Michal Sojka", email="wsh@2x.cz" },
]
description = "Convert ROS package.xml to Nix expression package.nix"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wentasah/ros2nix"
Issues = "https://github.com/wentasah/ros2nix/issues"

[project.scripts]
ros2nix = "ros2nix.ros2nix:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ros2nix"]
